syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.proto.StockRoomService";
option java_outer_classname = "StockRoomServiceImpl";

package com.proto.StockRoomService;

//Service Definition
service StockRoomService {
  rpc readyOrder(OrderRequestt) returns (ReadyResponse) {}
  rpc stockSupply(StockSupplyRequest) returns (StockSupplyResponse){}
  rpc stockAlert(AlertRequest) returns (stream AlertResponse) {}
}

//DEFINE THE MESSAGE
//Unary rpc
message OrderRequestt {
 string orderid = 1;
 string clientname = 2;
}

message ReadyResponse {
  string OrderStatus = 1;
}

//Unary rpc
message StockSupplyRequest {
float currentQty = 1;
float inputQty = 2;

 enum Operation{

  	ADDITION =0;
  }
  Operation operation = 3;

}

message StockSupplyResponse {
float result = 1;
string mysupply = 2;

}
//Server stream rpc
message AlertRequest {
  string itemname = 1;
  int32 minStockLevel = 2;
}

message AlertResponse {
  string message = 1;
}

